# fly-poetry-fastapi-rq

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  fly.itworks.toml  main.py  pyproject.toml  run-worker.sh  run.sh  setup.cfg
app/: celery.py  environment.py  main.py  redis_client.py  task_manager.py
app/factorial_service/: factorial.py  jobs.py
